--- a/css/app.css
+++ b/css/app.css
@@ -1,29 +1,42 @@
 /* app css stylesheet */
 
 body {
-  background: white url(../images/bg.jpg) no-repeat;
-  background-position: top center;
-  margin-bottom: 60px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #eee;
 }
 
-.logo-container {
-  background-color: rgba(255,255,255,0.80);
-  height: 80px;
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
 }
-
-.content-container {
-  margin-top: -20px;
-  padding-top: 20px;
-  background-color: rgba(255,255,255,0.80);
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
 }
-
-footer {
-  border-top: 3px solid #0079c0;
-  background: #28363e;
-  color: #dddddd;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  padding-top: 20px;
+.form-signin .checkbox {
+    font-weight: normal;
+}
+.form-signin .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+}
+.form-signin .form-control:focus {
+    z-index: 2;
+}
+.form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
